--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 <!-- Toolbar -->
 
 <app-like-hate></app-like-hate>
-<app-colleague [colleague]="fakeColleague" (liked)="onLiked()" (disliked)="onDisliked()"></app-colleague>
+<!-- <app-colleague [colleague]="fakeColleague" (liked)="onLiked()" (disliked)="onDisliked()"></app-colleague> -->
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
