component colleague ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,10 @@
 
 <!-- Toolbar -->
 
+<div>
+    <tc-colleague [colleague]="fakeColleague"></tc-colleague>
+</div>
 <app-like-hate></app-like-hate>
-<!-- <app-colleague [colleague]="fakeColleague" (liked)="onLiked()" (disliked)="onDisliked()"></app-colleague> -->
 
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
@@ -20,4 +22,3 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
