--- a/src/app/shared/components/colleague/colleague.component.html
+++ b/src/app/shared/components/colleague/colleague.component.html
@@ -1,7 +1,8 @@
-<div class="colleague-card">
-    <img [src]="colleague.photo" alt="{{ colleague.pseudo }}'s photo">
-    <h3>{{ colleague.pseudo }}</h3>
-    <p>Score: {{ colleague.score }}</p>
-    <button (click)="like()">J'aime</button>
-    <button (click)="dislike()">Je déteste</button>
+<div class="d-flex align-items-center justify-content-center full-height">
+  <div class="colleague-box text-center">
+    <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
+    <h5 class="mt-3">{{ colleague.pseudo }}</h5>
+    <p>{{ colleague.score }}</p>
+    <app-like-hate></app-like-hate>
   </div>
+</div>
