--- a/src/app/shared/components/colleague/colleague.component.scss
+++ b/src/app/shared/components/colleague/colleague.component.scss
@@ -1,14 +1,13 @@
 .colleague-box {
-    width: 200px; /* Définissez la largeur de votre carré */
-    height: 200px; /* Définissez la hauteur de votre carré */
-    border: 1px solid #ccc; /* Bordure optionnelle */
-    padding: 10px; /* Espacement interne optionnel */
+    width: 300px; 
+    height: 300px; 
+    border: 1px solid #ccc; 
+    padding: 10px; 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  /* styles.css ou styles.scss */
 .full-height {
     height: 100vh;
   }
