--- a/src/app/shared/components/colleague/colleague.component.html
+++ b/src/app/shared/components/colleague/colleague.component.html
@@ -3,6 +3,7 @@
     <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
     <h5 class="mt-3">{{ colleague.pseudo }}</h5>
     <p>{{ colleague.score }}</p>
-    <app-like-hate></app-like-hate>
+    <app-like-hate (likeHateClicked)="handleLikeHateClick($event)"></app-like-hate>
+
   </div>
 </div>
