--- a/src/app/shared/components/like-hate/like-hate.component.html
+++ b/src/app/shared/components/like-hate/like-hate.component.html
@@ -1,4 +1,4 @@
-    <div>
-        <button type="button" class="btn btn-outline-primary mx-2" >J'aime</button>
-        <button type="button" class="btn btn-outline-danger mx-2">Je déteste</button>
-    </div>
+<div>
+    <button type="button" class="btn btn-outline-primary mx-2" (click)="likeClicked()">J'aime</button>
+    <button type="button" class="btn btn-outline-danger mx-2" (click)="hateClicked()">Je déteste</button>
+  </div>
