--- a/src/app/shared/components/colleague/colleague.component.html
+++ b/src/app/shared/components/colleague/colleague.component.html
@@ -1,8 +1,3 @@
-<div class="d-flex align-items-center justify-content-center full-height">
-  <div class="colleague-box text-center">
-    <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
-    <h5 class="mt-3">{{ colleague.pseudo }}</h5>
-    <p>{{ colleague.score }}</p>
-    <app-like-hate (likeHateClicked)="handleLikeHateClick($event)" [disabledLike]="colleague.score >= 1000" [disabledHate]="colleague.score <= -1000"></app-like-hate>
-  </div>
-</div>
+<app-like-hate (likeHateClicked)="handleLikeHateClick($event)"
+[disabledLike]="colleague.score >= 1000" [disabledHate]="colleague.score <= -1000"></app-like-hate>
+
