--- a/src/app/shared/components/colleague-list/colleague-list.component.html
+++ b/src/app/shared/components/colleague-list/colleague-list.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let colleague of colleagues" class="colleague-box text-center">
     <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
     <h5 class="mt-3">{{ colleague.pseudo }}</h5>
-    <p>{{ colleague.score }}</p>
+    <p>{{ colleague.score | score }}</p>
     <tc-colleague [colleague]="colleague"></tc-colleague>
   </div>
 </div>
