--- a/src/app/shared/components/colleague-list/colleague-list.component.html
+++ b/src/app/shared/components/colleague-list/colleague-list.component.html
@@ -1,7 +1,7 @@
 <div class="colleague-list d-flex flex-wrap">
   <div *ngFor="let colleague of colleagues" class="colleague-box text-center">
     <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
-    <h5 class="mt-3">{{ colleague.pseudo }}</h5>
+    <h5 class="mt-3">{{ colleague.pseudo | uppercase }}</h5>
     <p>{{ colleague.score | score }}</p>
     <tc-colleague [colleague]="colleague"></tc-colleague>
   </div>
