--- a/src/app/shared/components/colleague-list/colleague-list.component.html
+++ b/src/app/shared/components/colleague-list/colleague-list.component.html
@@ -1,3 +1,4 @@
+<h2>Collègues:</h2>
 <div class="colleague-list d-flex flex-wrap">
   <div *ngFor="let colleague of colleagues" class="colleague-box text-center">
     <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
