--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 <div>
     <tc-colleague-list [colleagues]="colleaguesArray"></tc-colleague-list>
-
+    <tc-voting-history></tc-voting-history>
 </div>
