welcome page ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-
-
-<div>
-    <tc-colleague-list [colleagues]="colleaguesArray"></tc-colleague-list>
-    <tc-voting-history></tc-voting-history>
-</div>
+<tc-welcome></tc-welcome>
