--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -1,3 +1,11 @@
 <button>Raffraichir</button>
+<div class="container">
+    <div class="row">
+      <div class="col-md-6">
 <tc-colleague-list ></tc-colleague-list>
+</div>
+<div class="col-md-6">
 <tc-voting-history></tc-voting-history>
+</div>
+</div>
+</div>
