--- a/src/app/shared/components/voting-history/voting-history.component.html
+++ b/src/app/shared/components/voting-history/voting-history.component.html
@@ -4,7 +4,7 @@
   <div class="vote-item">
     <img [src]="vote.colleague.photo" class="colleague-photo" alt="Collègue Image">
     <div class="vote-details">
-      <p class="colleague-name">{{ vote.colleague.pseudo }} est {{ vote.vote === 'LIKE' ? 'aimé' : 'détesté' }}, elle a désormais un score de  {{ vote.colleague.score }} :)</p>
+      <p class="colleague-name">{{ vote.colleague.pseudo }} est {{ vote.vote }}, elle a désormais un score de  {{ vote.colleague.score }} :)</p>
     </div>
     <button >Supprimer</button>
   </div>
