--- a/src/app/shared/components/colleague/colleague.component.html
+++ b/src/app/shared/components/colleague/colleague.component.html
@@ -1,3 +1,13 @@
-<app-like-hate (likeHateClicked)="handleLikeHateClick($event)"
-[disabledLike]="colleague.score >= 1000" [disabledHate]="colleague.score <= -1000"></app-like-hate>
+<div class="colleague-list row">
+    <div class="colleague-box text-center">
+      <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
+      <h5 class="mt-3">{{ colleague.pseudo | uppercase }}</h5>
+      <p>{{ colleague.score | score }}</p>
 
+      <app-like-hate (likeHateClicked)="handleLikeHateClick($event)" [disabledLike]="colleague.score >= 1000"
+        [disabledHate]="colleague.score <= -1000">
+        (addvote)="addVote($event)"
+
+      </app-like-hate>
+    </div>
+</div>
