--- a/src/app/shared/components/colleague/colleague.component.html
+++ b/src/app/shared/components/colleague/colleague.component.html
@@ -1,6 +1,6 @@
 <div class="colleague-list row">
     <div class="colleague-box text-center">
-      <img [src]="colleague.photo" class="img-fluid" alt="Collague Image">
+      <img src="{{ colleague?.photo }}" class="img-fluid" alt="Collague Image">
       <h5 class="mt-3">{{ colleague.pseudo | uppercase }}</h5>
       <p>{{ colleague.score | score }}</p>
 
