--- a/src/app/shared/components/colleague/colleague.component.scss
+++ b/src/app/shared/components/colleague/colleague.component.scss
@@ -1,6 +1,6 @@
 .colleague-box {
-    width: 300px; 
-    height: 300px; 
+    width: 100%; 
+    height: 100%; 
     border: 1px solid #ccc; 
     display: flex;
     flex-direction: column;
