--- a/src/app/shared/components/create-colleague-forms/create-colleague-forms.component.html
+++ b/src/app/shared/components/create-colleague-forms/create-colleague-forms.component.html
@@ -1,81 +1,49 @@
-<form (ngSubmit)="submit()" #monForm="ngForm">
-  <div class="form-group row">
-    <label for="pseudo" class="col-4 col-form-label">Pseudo</label>
-    <div class="col-8">
-      <div class="input-group">
-        <div class="input-group-prepend">
-        </div>
-        <input [(ngModel)]="model.pseudo" name="pseudo" type="text" class="form-control" #pseudo="ngModel" required
-          (blur)="model.pseudoValid = !pseudo.invalid">
+<form class="form" (ngSubmit)="submit()" #monForm="ngForm">
+  <h2>Ajouter un collègue</h2>
+  <label for="pseudo" >Pseudo</label>
+  <input [(ngModel)]="model.pseudo" name="pseudo" type="text" #pseudo="ngModel" required
+    (blur)="model.pseudoValid = !pseudo.invalid">
 
-      </div>
-      <p *ngIf="pseudo.touched && pseudo.invalid">
-        <ng-container>
-          Le pseudo est requis.
-        </ng-container>
-      </p>
-    </div>
-    <div class="form-group row">
-      <label for="nom" class="col-4 col-form-label">Nom</label>
-      <div class="col-8">
-        <div class="input-group">
-          <div class="input-group-prepend">
-          </div>
-          <input [(ngModel)]="model.nom" #nom="ngModel" id="nom" name="nom" type="text" class="form-control" required
-            (blur)="model.nomValid = !nom.invalid" minlength="2">
-        </div>
-        <p *ngIf="nom.touched && nom.invalid">
-          <ng-container >
-            Le nom est requis.
-          </ng-container>
-          <ng-container *ngIf="nom.errors?.['minlength']">
-            Le nom doit avoir au moins 2 caractères.
-          </ng-container>
-        </p>
-      </div>
-      <div class="form-group row">
-        <label for="prenom" class="col-4 col-form-label">Prenom</label>
-        <div class="col-8">
-          <div class="input-group">
-            <div class="input-group-prepend">
-            </div>
-            <input [(ngModel)]="model.prenom" #prenom="ngModel" id="prenom" name="prenom" type="text"
-              class="form-control" (blur)="model.prenomValid = !prenom.invalid" minlength="2" required>
-          </div>
-          <p *ngIf="prenom.touched && prenom.invalid">
-            <ng-container >
-              Le Prenom est requis.
-            </ng-container> 
-            <ng-container *ngIf="prenom.errors?.['minlength']">
-              Le prenom doit avoir au moins 2 caractères.
-            </ng-container>
-          </p>
-         
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="photo" class="col-4 col-form-label">Photo</label>
-        <div class="col-8">
-          <div class="input-group">
-            <div class="input-group-prepend">
-            </div>
-            <input [(ngModel)]="model.urlphoto" #urlphoto="ngModel" id="photo" name="photo" type="text"
-              class="form-control" required>
-          </div>
-          <p *ngIf="urlphoto.touched && urlphoto.invalid">
-            La photo ne peut pas être vide
-          </p>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="offset-4 col-8">
-          <button name="submit" type="submit" [disabled]="monForm.invalid" class="btn btn-primary">Ajouter</button>
-        </div>
-        <p *ngIf="monForm.invalid && (monForm.dirty || monForm.touched)">
-          Au moins un champ du formulaire est invalide.
-        </p>
-      </div>
-    </div>
+  <p *ngIf="pseudo.touched && pseudo.invalid">
+    <ng-container>
+      Le pseudo est requis.
+    </ng-container>
+  </p>
+  <label for="nom">Nom</label>
+  <input [(ngModel)]="model.nom" #nom="ngModel" id="nom" name="nom" type="text"  required
+    (blur)="model.nomValid = !nom.invalid" minlength="2">
+  <p *ngIf="nom.touched && nom.invalid">
+    <ng-container>
+      Le nom est requis.
+    </ng-container>
+    <ng-container *ngIf="nom.errors?.['minlength']">
+      Le nom doit avoir au moins 2 caractères.
+    </ng-container>
+  </p>
+  <label for="prenom" >Prenom</label>
+  <input [(ngModel)]="model.prenom" #prenom="ngModel" id="prenom" name="prenom" type="text" 
+    (blur)="model.prenomValid = !prenom.invalid" minlength="2" required>
+  <p *ngIf="prenom.touched && prenom.invalid">
+    <ng-container>
+      Le Prenom est requis.
+    </ng-container>
+    <ng-container *ngIf="prenom.errors?.['minlength']">
+      Le prenom doit avoir au moins 2 caractères.
+    </ng-container>
+  </p>
 
-  </div>
+  <label for="photo">Photo</label>
+  <input [(ngModel)]="model.urlphoto" #urlphoto="ngModel" id="photo" name="photo" type="text" 
+    required>
+  <p *ngIf="urlphoto.touched && urlphoto.invalid">
+    La photo ne peut pas être vide
+  </p>
+
+  <button name="submit" type="submit" [disabled]="monForm.invalid">Ajouter</button>
+
+  <p *ngIf="monForm.invalid && (monForm.dirty || monForm.touched)">
+    Au moins un champ du formulaire est invalide.
+  </p>
+ 
 </form>
+
