colleague form reactive ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <button>Raffraichir</button>
 <tc-create-colleague></tc-create-colleague>
+<tc-create-colleague-reactive></tc-create-colleague-reactive>
 <tc-counter></tc-counter>
 <tc-welcome></tc-welcome>
+
